name:		network-data
version:	0.0.1
license:	BSD3
license-file:	LICENSE
author:		Thomas DuBuisson <thomas.dubuisson@gmail.com>
maintainer:	Thomas DuBuisson
description:	Library for network data structures (ex: headers and helper functions)
synopsis:	This library includes definiations for common headers such as IPv4, IPv6, UDP, TCP, etc.  Patches welcome.
category:	Data, Networking
stability:	stable
build-type:	Simple
cabal-version:	>= 1.2
tested-with:	GHC == 6.10.1
extra-source-files:

Flag small_base
  Description: Choose the split-up base package.

Library
  if flag(small_base)
    Build-Depends: base >= 3, bytestring >= 0.9 && < 1.0, binary >= 0.4.0 && < 0.5.0, prettyclass, pretty, parsec
  else
    Build-Depends: base >= 3, bytestring >= 0.9 && < 1.0, binary >= 0.4.0 && <0.5.0, prettyclass, pretty, parsec
  hs-source-dirs:
  exposed-modules: Data.IP
  ghc-options: 
